'用户界面的完善'

--- a/src/main/webapp/change_password.html
+++ b/src/main/webapp/change_password.html
@@ -241,7 +241,7 @@
                                     <div class="woocommerce-shipping-fields">
                                         <h3>淘 不出掌心</h3>
                                         <p class="form-row form-row">
-                                            <label class="">这里放微淘的骚粉大LOGO</label>
+                                            <!--<label class="">这里放微淘的骚粉大LOGO</label>-->
                                             <!--LOGO模块/////////////////////////////////////////////////////////////-->
                                             <div style="width:500px ;height: 500px">
                                         <img src="static/images/WeTao_logo_big.jpg">
