--- a/src/main/webapp/collection.html
+++ b/src/main/webapp/collection.html
@@ -24,79 +24,6 @@
 </div>
 <!-- Loader end-->
 
-
-<!-- ==========================-->
-<!-- FULL SCREEN MENU-->
-<!-- ==========================-->
-<!--<div class="wrap-fixed-menu" id="fixedMenu">-->
-
-
-    <!--<button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>-->
-
-    <!--<nav class="fullscreen-center-menu">-->
-
-        <!--<div id="dl-menu" class="dl-menuwrapper">-->
-            <!--<ul class="dl-menu menu-item list-unstyled">-->
-
-
-                <!--<li class="has-children ">-->
-                    <!--<a href="#"><span>Home <i class="arrow_carrot-right"></i> </span></a>-->
-                    <!--<ul class="dl-submenu">-->
-
-                        <!--<li><a href="home.html"><span>Home 1</span></a></li>-->
-                        <!--<li><a href="home-2.html"><span>Home 2</span></a></li>-->
-
-
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li><a href="about.html"><span>about</span></a></li>-->
-                <!--<li><a href="lookbook.html"><span>lookbook</span></a></li>-->
-
-                <!--<li>-->
-                    <!--<a href="shop-1.html"><span>shop <i class="arrow_carrot-right"></i>  </span></a>-->
-
-                    <!--<ul class="dl-submenu">-->
-
-                        <!--<li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>-->
-                        <!--<li><a href="shop-2.html"><span>Catalog Grid 2</span></a></li>-->
-                        <!--<li><a href="shop-2-list.html"><span>Catalog List</span></a></li>-->
-                        <!--<li><a href="shop-single-1.html"><span>Product page 1</span></a></li>-->
-                        <!--<li><a href="shop_single.html"><span>Product page 2</span></a></li>-->
-                        <!--<li><a href="shop-single-3.html"><span>Product page 3</span></a></li>-->
-                        <!--<li><a href="cart.html"><span>Cart page</span></a></li>-->
-                        <!--<li><a href="checkout.html"><span>Checkout page </span></a></li>-->
-
-                    <!--</ul>-->
-
-                <!--</li>-->
-
-
-                <!--<li class="has-children">-->
-                    <!--<a href="#"><span> Blog <i class="arrow_carrot-right"></i> </span></a>-->
-                    <!--<ul class="dl-submenu">-->
-
-                        <!--<li><a href="blog-main.html"><span>Blog main</span></a></li>-->
-                        <!--<li><a href="blog-main-2.html"><span>Blog main 2</span></a></li>-->
-                        <!--<li><a href="blog-main-3.html"><span>Blog main 3</span></a></li>-->
-                        <!--<li><a href="blog-post.html"><span>Blog post </span></a></li>-->
-
-                    <!--</ul>-->
-                <!--</li>-->
-
-                <!--<li><a href="typography.html"><span>typography</span></a></li>-->
-                <!--<li><a href="contact.html"><span>contact</span></a></li>-->
-
-
-            <!--</ul>-->
-
-        <!--</div>-->
-
-
-    <!--</nav>-->
-
-<!--</div>-->
-
-
 <div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
     <!-- ==========================-->
     <!-- SEARCH MODAL-->
@@ -128,17 +55,13 @@
             <nav class="navbar" id="nav">
                 <div class="container">
                     <div class="header-navibox-1">
-                        <!-- Desctop Trigger Start-->
-                        <!--<button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i-->
-                        <!--class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>-->
-                        <!--</button>-->
-                        <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
+                            <!--售后入口，为空///////////////////////////////////////////////////////////////////////////////////////-->
+                            <li>
+                                <a><h5></h5></a>
+                            </li>
                             <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="home.html"><h5>主 页</h5></a>
-                            </li>
-                            <!--售后入口///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="order_over.html"><h5>售 后</h5></a>
                             </li>
                             <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="collection.html"><h5>收 藏</h5></a>
@@ -241,8 +164,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice" id="advice">
-                            <button class="footer-form__btn" onclick="sendAdvice()"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -260,26 +185,26 @@
                         <div class="footer-nav">
                             <div class="row">
                                 <div class="col-md-5">
-                                    <ul class="footer-list list-unstyled">
+                                    <!--<ul class="footer-list list-unstyled">-->
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a href="seller_login.html" class="footer-list__link">商家入驻</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">陈光赐</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">胡泽彬</a>
+                                        </li>
+                                        <li class="footer-list__item"><a class="footer-list__link">成钦宏</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
+                                    <ul class="list list-mark-3">
+                                        <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
-                                        </li>
-                                        <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -303,8 +228,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® 本项目由以上成员提供所有技术支持</span>
+                            <a class="copyright__link"> UI created by Cc</a>
                         </div>
                     </div>
                 </div>
