--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -64,15 +64,6 @@
                         <ul class="nav navbar-nav clearfix vcenter">
                             <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                             </li>
-                            <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <!--<li><a href="#">个人信息</a>-->
-                            <!--</li>-->
-                            <li><span class="header-cart">
-
-                            <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
-                                    </span>
-                            </li>
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
@@ -101,11 +92,6 @@
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
                             <li><a href=""><h4>注册一个账号吧</h4></a>
                             </li>
-                            <!--<li><a href="">Clothing</a>-->
-                            <!--</li>-->
-                            <!--<li><a href="">Jackets</a>-->
-                            <!--</li>-->
-                            <!--<li class="">acronym</li>-->
                         </ol>
                     </div>
                     <!-- end .wrap-breadcrumb-->
@@ -183,7 +169,7 @@
                                 </div>
                                 <div class="col-2">
                                     <div class="woocommerce-shipping-fields">
-                                        <h3>添加一个你的个性头像吧</h3>
+                                        <h3>添加一个你的个人头像吧</h3>
                                         <p class="form-row form-row">
                                             <label class=""></label>
                                         <input type="hidden" name="uIcon" id="uIcon">
@@ -196,13 +182,8 @@
                                     <!---->
                                 </div>
                             </div>
-                            <!--<h3 id="order_review_heading">信息确认无误就确认注册吧</h3>-->
                             <div id="order_review" class="woocommerce-checkout-review-order">
-                                <div id="payment" class="woocommerce-checkout-payment">
-                                    <div class="form-row place-order">
-                                            <input type="button" class="button alt" id="place_order" value="注  册 register" data-value="Place order" onclick="checkregister()"/>
-                                    </div>
-                                </div>
+                                <br><input type="button" class="button alt" id="place_order" value="注  册 register" data-value="Place order" onclick="checkregister()" style="width: 550px"/>
                             </div>
                         </form>
                     </div>
@@ -238,27 +219,26 @@
                         <div class="footer-nav">
                             <div class="row">
                                 <div class="col-md-5">
-                                    <ul class="footer-list list-unstyled">
+                                    <!--<ul class="footer-list list-unstyled">-->
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a href="seller_login.html"
-                                                                         class="footer-list__link">商家入驻</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">陈光赐</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">胡泽彬</a>
+                                        </li>
+                                        <li class="footer-list__item"><a class="footer-list__link">成钦宏</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
+                                    <ul class="list list-mark-3">
+                                        <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
-                                        </li>
-                                        <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -282,8 +262,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
-                            <a class="copyright__link"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® 本项目由以上成员提供所有技术支持</span>
+                            <a class="copyright__link"> UI created by Cc</a>
                         </div>
                     </div>
                 </div>
