--- a/src/main/webapp/shop_single.html
+++ b/src/main/webapp/shop_single.html
@@ -12,10 +12,6 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
-    <!--[if lt IE 9 ]>
-    <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
-    <meta content="no" http-equiv="imagetoolbar">
-    <![endif]-->
 </head>
 
 <body>
@@ -56,17 +52,13 @@
         <nav class="navbar" id="nav">
             <div class="container">
                 <div class="header-navibox-1">
-                    <!-- Desctop Trigger Start-->
-                    <!--<button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i-->
-                    <!--class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>-->
-                    <!--</button>-->
-                    <!-- Desctop Trigger End-->
                     <ul class="main-menu yamm nav navbar-nav">
+                        <!--售后入口，为空///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li>
+                            <a><h5></h5></a>
+                        </li>
                         <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="home.html"><h5>主 页</h5></a>
-                        </li>
-                        <!--售后入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="order_over.html"><h5>售 后</h5></a>
                         </li>
                         <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="collection.html"><h5>收 藏</h5></a>
@@ -471,27 +463,26 @@
                         <div class="footer-nav">
                             <div class="row">
                                 <div class="col-md-5">
-                                    <ul class="footer-list list-unstyled">
+                                    <!--<ul class="footer-list list-unstyled">-->
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a href="seller_login.html"
-                                                                         class="footer-list__link">商家入驻</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">陈光赐</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">胡泽彬</a>
+                                        </li>
+                                        <li class="footer-list__item"><a class="footer-list__link">成钦宏</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
+                                    <ul class="list list-mark-3">
+                                        <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
-                                        </li>
-                                        <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -515,8 +506,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
-                            <a class="copyright__link"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® 本项目由以上成员提供所有技术支持</span>
+                            <a class="copyright__link"> UI created by Cc</a>
                         </div>
                     </div>
                 </div>
