--- a/src/main/webapp/cart.html
+++ b/src/main/webapp/cart.html
@@ -55,13 +55,14 @@
             <div class="container">
                 <div class="header-navibox-1">
                     <ul class="main-menu yamm nav navbar-nav">
-                        <!--主页模块///////////////////////////////////////////////////////////////////////////////////////-->
+                        <!--售后入口，为空///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li>
+                            <a><h5></h5></a>
+                        </li>
+                        <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="home.html"><h5>主 页</h5></a>
                         </li>
-                        <!--售后模块///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="order_over.html"><h5>售 后</h5></a>
-                        </li>
-                        <!--收藏夹模块///////////////////////////////////////////////////////////////////////////////////////-->
+                        <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="collection.html"><h5>收 藏</h5></a>
                         </li>
                     </ul>
@@ -147,8 +148,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice" id="advice">
-                            <button class="footer-form__btn" onclick="sendAdvice()"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -166,26 +169,26 @@
                         <div class="footer-nav">
                             <div class="row">
                                 <div class="col-md-5">
-                                    <ul class="footer-list list-unstyled">
+                                    <!--<ul class="footer-list list-unstyled">-->
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a href="seller_login.html" class="footer-list__link">商家入驻</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">brand</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">陈光赐</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">胡泽彬</a>
+                                        </li>
+                                        <li class="footer-list__item"><a class="footer-list__link">成钦宏</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
+                                    <ul class="list list-mark-3">
+                                        <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
-                                        </li>
-                                        <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -209,8 +212,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® 本项目由以上成员提供所有技术支持</span>
+                            <a class="copyright__link"> UI created by Cc</a>
                         </div>
                     </div>
                 </div>
