'商家管理员页脚修改'

--- a/src/main/webapp/store_add.html
+++ b/src/main/webapp/store_add.html
@@ -255,27 +255,26 @@
                         <div class="footer-nav">
                             <div class="row">
                                 <div class="col-md-5">
-                                    <ul class="footer-list list-unstyled">
+                                    <!--<ul class="footer-list list-unstyled">-->
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a href="seller_login.html"
-                                                                         class="footer-list__link">商家入驻</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">陈光赐</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">胡泽彬</a>
+                                        </li>
+                                        <li class="footer-list__item"><a class="footer-list__link">成钦宏</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
+                                    <ul class="list list-mark-3">
+                                        <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
-                                        </li>
-                                        <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -299,8 +298,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
-                            <a class="copyright__link"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® 本项目由以上成员提供所有技术支持</span>
+                            <a class="copyright__link"> UI created by MacDonald</a>
                         </div>
                     </div>
                 </div>
