--- a/src/main/webapp/items-amend.html
+++ b/src/main/webapp/items-amend.html
@@ -283,7 +283,7 @@
                                             <!--动态获取商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
                                         <h4>添加一段关于商品的介绍吧</h4>
                                         <p class="form-row form-row">
-                                            <label for="order_comments" class="">(Items Introduction)</label>
+                                            <label class="">(Items Introduction)</label>
                                             <textarea name="iIntroduction" class="input-text " i    d="order_comments"
                                                       placeholder="写下产品的优点、特色、使用方法等......"></textarea>
                                         </p>
@@ -300,11 +300,11 @@
 
                                     <div class="form-row place-order">
 
-                                        <input type="submit" class="button alt" id="place_order" value="登 记 商 品  Confirm"
+                                        <input type="submit" class="button alt" value="登 记 商 品  Confirm"
                                                data-value="Place order"/>
                                     </div>
                                     <div class="form-row place-order">
-                                        <input type="button" class="button alt" id="place_order" value="返 回 Return"
+                                        <input type="button" class="button alt"  value="返 回 Return"
                                                data-value="Place order" style="line-height:1.3;border:0" onclick="window.history.back(-1)"/>                                        
                                     </div>
                                 </div>
@@ -322,8 +322,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="email" placeholder="enter your advice">
-                            <button class="footer-form__btn"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -341,34 +343,26 @@
                         <div class="footer-nav">
                             <div class="row">
                                 <div class="col-md-5">
-                                    <ul class="footer-list list-unstyled">
+                                    <!--<ul class="footer-list list-unstyled">-->
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="blog1.html">About
-                                            Us</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">陈光赐</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link"
-                                                                         href="">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">胡泽彬</a>
                                         </li>
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="privacy-policy.html">Privacy</a>-->
-                                        <!--</li>-->
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="terms-of-use.html">Terms</a>-->
-                                        <!--</li>-->
+                                        <li class="footer-list__item"><a class="footer-list__link">成钦宏</a>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Contact</a>
+                                    <ul class="list list-mark-3">
+                                        <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
-                                        </li>
-                                        <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="display.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -380,17 +374,20 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel
-                            ultrices velit. Etiam pellentesque nibh at quam facilisis, eu maximus dolor tincidunt. Cras
-                            porta luctus pretium. Nam posuere libero a neque rhoncus, eu
-                            viverra mauris volutpat. Integer at venenatis mi. Sed sagittis lobortis gravida. Phasellus
-                            ac finibus sem, et mattis dolor. Vestibulum vitae hendrerit urna, id volutpat magna.
+                        <div class="footer-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
+                            拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
+                            履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
+                            不掺杂使假、以假充真、以次充好；不生产销售有毒有害、失效、腐烂变质的食品和不合格的食品；<br>
+                            不使用不规范、不合格的计量器具销售商品；不销售应当检验、检疫而未检验、检疫的商品或检验、检疫不合格的商品；
+                            不销售国家明令禁止上市或淘汰的商品；
+                            不作虚假宣传，不误导消费者。
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link" href="home.html"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® 本项目由以上成员提供所有技术支持</span>
+                            <a class="copyright__link"> UI created by MacDonald</a>
                         </div>
                     </div>
                 </div>
@@ -438,3 +435,4 @@
 </html>
 
 
+<script type="text/javascript" src="static/jq/advice.js"></script>
